bad/div_invalid_types_array_bool.example_compiler_output
ERROR
[1mbad/div_invalid_types_array_bool.lat:3:13: [1;31merror: [0;1mdivision is defined only for int values, not `int[]` and `boolean`[m
	new int[3] / false;
	           [1;32m^[m
